# turboWAVE

./: .clangd  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md
.github/workflows/: c-cpp.yml
core/SPARC-Database/: air.txt  air_species.txt  hydrogen.txt  nitrogen.txt  oxygen.txt  water.txt
core/examples/fluid/: LWFA-PML.tw  LWFA-PML.txt  LWFA-coulomb.tw  LWFA-coulomb.txt  LWFA.tw  LWFA.txt  backward-raman.tw  beatwave-3d.tw  beatwave-3d.txt  beatwave.tw  beatwave.txt
core/examples/hydro/: argon-0.tw  argon-1.tw  argon-2.tw  argon-3.tw  argon-breakdown.tw  argon-plasma-1d.tw  argon-plasma-1d.txt  argon-plasma-2d.tw  argon-plasma-2d.txt  copper-acoustics.tw  copper-acoustics.txt  laser-excite-1d.tw  laser-excite-1d.txt  laser-excite-2d.tw  laser-excite-2d.txt  laser-excite-multi-pulse.tw  simple-1d-shock.tw  simple-1d-shock.txt  simple-2d-shock.tw  simple-2d-shock.txt  simple-diffusion.tw  simple-diffusion.txt  simple-shock.nb  single-frame-diagnostic.tw
core/examples/misc/: dipole-radiation.tw  dipole-radiation.txt  fluid-pic-hybrid.tw  fluid-pic-hybrid.txt  hermite00.tw  hermite00.txt  mag-dipole.tw  mag-dipole.txt  performance-3d.tw  (+5 more)
core/qed_tables/: mmc1.table  mmc2.table  mmc3.table  mmc4.table  mmc5.table
core/source/: 3DFields.cpp  3dfields.h  3dmath.h  CMakeLists.txt  Chemistry.cpp  ComputeTool.cpp  Diagnostics.cpp  DiscreteSpace.cpp  Electrostatic.cpp  Elliptic.cpp  FFT.cpp  FieldSolve.cpp  Fluid.cpp  Grid.cpp  Hyperbolic.cpp  Injection.cpp  Input.cpp  LaserSolve.cpp  Main.cpp  MetricSpace.cpp  Module.cpp  Numerics.cpp  Parabolic.cpp  Particles.cpp  Particles_Bundle.cpp  Particles_Mover.cpp  Particles_Mover_Test.cpp  Particles_Pusher.cpp  Particles_Slicer.cpp  Particles_Test.cpp  Particles_Tiler.cpp  Physics.cpp  Pusher.cpp  Qstate.cpp  Quantum.cpp  Region.cpp  Simulation.cpp  SolidState.cpp  TW_MPI.cpp  Tasks.cpp  (+50 more)
core/source/base/: 3DFields.cpp  3dfields.h  3dmath.h  ComputeTool.cpp  DiscreteSpace.cpp  DynSpace.cpp  FFT.cpp  Factory.cpp  Fields.cpp  Functions.cpp  Injection.cpp  Injection_Test.cpp  Main.cpp  MetricSpace.cpp  MetricSpace_Test.cpp  Module.cpp  Region.cpp  Simulation.cpp  StaticSpace.cpp  Tasks.cpp  base.cpp  computeTool.h  config.h  config.h.in  ctools.h  definitions.h  discreteSpace.h  fields.cl  functions.h  hydro_primitives.cpp  injection.h  logger.cpp  meta_base.h  meta_tools.h  metricSpace.h  module.h  pic_primitives.cpp  region.h  simulation.h  tensor.cpp  (+4 more)
core/source/concurrency/: TW_MPI.cpp  Tasks.cpp  tasks.h  tw_mpi.h  tw_thread_stl.h
core/source/driver/: Bounded.cpp  Diagnostic.cpp  Driver.cpp  Engine.cpp  PrimitiveRegion.cpp  Profile.cpp  Region.cpp  Simulation.cpp  Tool.cpp  Warp.cpp
core/source/fields/: Fields.cpp  aggregates.cpp  base.cpp  primitives.cpp  test.cpp  tools.cpp  transform.cpp  vector_ops.cpp
core/source/io/: Assignment.cpp  Diagnostics.cpp  Input.cpp  MainReader.cpp  Navigate.cpp  Preprocess.cpp  ReadDriver.cpp  ReadGrid.cpp  ReadSim.cpp  Units.cpp  assignment.h  diagnostics.h  input.h  parser.c  parser.h  ts_convenience.h  units.h
core/source/io/tree-sitter/: README.md
core/source/main/: Commands.cpp  Factory.cpp  Main.cpp  Simulation.cpp
core/source/particles/: Bundle.cpp  Mover.cpp  Mover_Bohmian.cpp  Mover_Boris.cpp  Mover_HC.cpp  Mover_PGC.cpp  Mover_Photon.cpp  Mover_Test.cpp  Mover_Unitary.cpp  Particles.cpp  Particles_Test.cpp  Pusher.cpp  Pusher_Test.cpp  Qed.cpp  Slicer.cpp  Tiler.cpp  bundle.h  mover.h  particles.h  pusher.h  qed.h  tiler.h
core/source/solver/: Electrostatic.cpp  Elliptic.cpp  Elliptic_Test.cpp  FieldSolve.cpp  Hyperbolic.cpp  Injection.cpp  LaserSolve.cpp  Numerics.cpp  Parabolic.cpp  Qstate.cpp  Quantum.cpp  RelColdFluid.cpp  SolidState.cpp  electrostatic.h  elliptic.h  fieldSolve.h  hyperbolic.h  laserSolve.h  numerics.h  numerics_parallel.cpp  numerics_serial.cpp  quantum.h  solidState.h
core/source/sparc/: Chemical.cpp  Chemistry.cpp  Fluid.cpp  Fluid_Test.cpp  Group.cpp  Hydro.cpp  Physics.cpp  Physics_Test.cpp  chemistry.h  fct.cpp  fluid.h  physics.h
core/source/test/: Physics_Test.cpp  README.md  elliptic_test.cpp  fft_test.cpp  fluid_test.cpp  iterator_test.cpp  metric_space_test.cpp  mover_test.cpp  particles_test.cpp  pusher_test.cpp  regions_test.cpp
core/supercomputer/: Edison-XC30.cmd  HPC-modules-notes  Mustang-HPE-SGI.pbs  Topaz-ICEX-GPU.cmd  Topaz-ICEX.cmd  bash_profile.ext  bashrc.ext  cori-haswell.slurm  cori-knl-dbg.slurm  cori-knl.slurm  hpc  hpc.bat  onyx-cray-xc40-cpu.pbs  onyx-cray-xc40-mic.pbs
core/test/: README.md
docs/: Doxyfile  Makefile  bak-em-modes.rst  bak-eos.rst  bak-publications.rst  bak-quantum.rst  boot.rst  conf.py  core-RHEL.rst  core-cluster.rst  core-hpc.rst  core-install.rst  core-mac.rst  core-ubuntu.rst  core-windows.rst  dev-base.rst  dev-driver.rst  dev-dyn-space.rst  dev-field.rst  dev-metric-space.rst  dev-module.rst  dev-space.rst  dev-testing.rst  dev-tool.rst  getting-components.rst  gpgpu-RHEL-amd.rst  gpgpu-RHEL-nvidia.rst  gpgpu-mac.rst  gpgpu-ubuntu-amd.rst  gpgpu-ubuntu-nvidia.rst  gpgpu-win.rst  gpgpu.rst  grammar.js  index.rst  install-easy.rst  install-gpgpu.rst  install-manual.rst  install-prepare.rst  license.rst  make.bat  (+25 more)
docs/figures/: Curl-Cells.ai  Direct.graffle  Fluid.graffle  PGC.graffle  Pusher.graffle  WAVE.graffle
tools/: DataViewer.dmg  DataViewer.ipynb
tools/.ipynb_checkpoints/: DataViewer-checkpoint.ipynb
tools/config-files/: .turbowave.nanorc  custom.css  filetype.vim  grammar.js  init.vim  package.json  tree-sitter-turbowave.cson  turbowave.cson  turbowave.micro.yaml  turbowave.vim  tw3d.vim
tools/extras/: NLO-PIC.ipynb  blowout-scalings.ipynb  hpc.bat  ionization.ipynb  maya-dvdat.py  os-convert.py  plot-dvdat.py  simple-plot.py  twmaya.py  twplot.py  unboost.py  wigner.py
tools/twcad/: conda-twcad.txt  openscad-translator.py  stdin  twcad.py
tools/twpost/: FFT.cpp  definitions.h  fft.h  makefile  twpost  twpost.cpp  twpost.h
tools/twtest/: twreport.html  twtest.py
tools/twutils/: LICENSE  README.md  README.rst  build.sh  meta.yaml  pyproject.toml  setup.py
(+74 files in other folders)
